# adamata-colors

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  config.yaml  config_dynamic.yaml  model_train.py  pyproject.toml  requirements.txt  settings.yaml  setup.py  tes.py
.github/workflows/: cicd.yml
bsort/: cli.py  data_augmentation.py  helper.py  inference.py  model_train.py
exploration/: research.ipynb
relabel/val/: labels.cache
relabel_aug/train/: labels.cache
relabel_aug/train/labels/: raw-250110_dc_s001_b2_1_aug1.txt  raw-250110_dc_s001_b2_1_aug11.txt  raw-250110_dc_s001_b2_1_aug12.txt  raw-250110_dc_s001_b2_1_aug14.txt  raw-250110_dc_s001_b2_1_aug15.txt  raw-250110_dc_s001_b2_1_aug16.txt  raw-250110_dc_s001_b2_1_aug17.txt  raw-250110_dc_s001_b2_1_aug18.txt  raw-250110_dc_s001_b2_1_aug19.txt  raw-250110_dc_s001_b2_1_aug2.txt  raw-250110_dc_s001_b2_1_aug21.txt  raw-250110_dc_s001_b2_1_aug23.txt  raw-250110_dc_s001_b2_1_aug24.txt  raw-250110_dc_s001_b2_1_aug25.txt  raw-250110_dc_s001_b2_1_aug27.txt  raw-250110_dc_s001_b2_1_aug28.txt  raw-250110_dc_s001_b2_1_aug3.txt  raw-250110_dc_s001_b2_1_aug4.txt  raw-250110_dc_s001_b2_1_aug6.txt  raw-250110_dc_s001_b2_1_aug7.txt  raw-250110_dc_s001_b2_1_aug8.txt  raw-250110_dc_s001_b2_1_aug9.txt  raw-250110_dc_s001_b2_3_aug0.txt  raw-250110_dc_s001_b2_3_aug1.txt  raw-250110_dc_s001_b2_3_aug10.txt  raw-250110_dc_s001_b2_3_aug11.txt  raw-250110_dc_s001_b2_3_aug12.txt  raw-250110_dc_s001_b2_3_aug13.txt  raw-250110_dc_s001_b2_3_aug14.txt  raw-250110_dc_s001_b2_3_aug15.txt  raw-250110_dc_s001_b2_3_aug16.txt  raw-250110_dc_s001_b2_3_aug17.txt  raw-250110_dc_s001_b2_3_aug18.txt  raw-250110_dc_s001_b2_3_aug19.txt  raw-250110_dc_s001_b2_3_aug2.txt  raw-250110_dc_s001_b2_3_aug21.txt  raw-250110_dc_s001_b2_3_aug22.txt  raw-250110_dc_s001_b2_3_aug24.txt  raw-250110_dc_s001_b2_3_aug25.txt  raw-250110_dc_s001_b2_3_aug26.txt  (+154 more)
runs/detect/train/: args.yaml  results.csv
tests/: test_utils.py
