[tool.poetry]
name = "bsort"
version = "0.1.0"
description = "CLI tool for YOLO training and inference"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "bsort"}]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.0"
pyyaml = "^6.0"
ultralytics = "^8.0.0"
opencv-python = "^4.5.0"
albumentations = "^1.3.0"
tqdm = "^4.60.0"
matplotlib = "^3.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"

[tool.poetry.scripts]
bsort = "bsort.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"