[tool.poetry]
name = "bsort"
version = "0.1.0"
description = "CLI tool for YOLO training and inference"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "bsort"}]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.3.1"
pyyaml = "^6.0.3"
ultralytics = "^8.3.229"
opencv-python = "^4.12.0.88"
albumentations = "^2.0.8"
tqdm = "^4.67.1"
matplotlib = "^3.10.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"

[tool.poetry.scripts]
bsort = "bsort.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"